# ai-trading-agent

./: .gitignore  README.md  agent.py  eval.py  main.py  pyproject.toml  tools.py
